Complete foundations-landing-page from TOP

--- a/index.html
+++ b/index.html
@@ -7,29 +7,29 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <header>
-        <div class="header-container">
+    <header class="part-one">
+        <div class="nav-bar">
             <div class="logo">Honey Shop</div>
-            <nav>
+            <nav class="nav-item">
                 <li><a href="">Products</a></li>
                 <li><a href="">FAQ</a></li>
                 <li><a href="">Shop</a></li>
             </nav>
         </div>
-        <div class="header-container2">
+        <div class="header-banner">
             <div>
                 <h1>Pure Nature's Gold - Straight from the Hive !</h1>
-                <p class="header-p">Discover nature's purest sweetness with our handcrafted, raw honey harvested sustainably from local hives to bring you the golden taste of untouched perfection.</p>
+                <p class="banner-p">Discover nature's purest sweetness with our handcrafted, raw honey harvested sustainably from local hives to bring you the golden taste of untouched perfection.</p>
                 <button>Contact us</button>
             </div>
-            <img class="image" src="./honey.jpg" alt="picture of honey">
+            <img src="./honey.jpg" alt="picture of honey">
         </div>
     </header>
     <main>
-        <section>
+        <section class="part-two">
             <h2>Benefits of Honey</h2>
-            <div class="container">
-                <div class="item">
+            <div class="card-container">
+                <div class="card-item">
                     <img class="image" src="./sec11.jpg" alt="picture of honey">
                     <p>Immune-Boosting Power : Raw honey is packed with antioxidants and antibacterial properties that help fight infections and strengthen your immune system naturally.</p>
                 </div>
@@ -48,14 +48,21 @@
             </div>
         </section>
         <section class="part-three">
-            <img class="image" src="./sec2.jpg" alt="picture of honey">
+            <img src="./sec2.jpg" alt="picture of honey">
             <blockquote>
                 <p>The honeybee is more than a insect; it's a spark of life. When you taste true honey, you taste the sunlight, the flowers, and the very soul of nature.</p>
-                <footer>- <cite> Maurice Maeterlinck</cite>, <span class="book-title">The Life of the Bees</span></footer>
+                <footer> <cite>- Maurice Maeterlinck,</cite> <span>The Life of the Bees</span></footer>
             </blockquote>
         </section>
+        <section class="part-four">
+            <div>
+                <h3>Call to action! it's time!</h3>
+                <p>sign up for our product by clicking that button over there!</p>
+            </div>
+            <button>Sign Up</button>
+        </section>
     </main>
-    <footer class="footer">
+    <footer class="part-five">
         <p>Copyright &copy; The Odin Project 2025</p>
     </footer>
 </body>
